# dio_bank

./: .gitignore  README.md  pyproject.toml  render-deploy.sh
dio_bank/: .gitignore  README.md
dio_bank/src/: utils.py
dio_bank/src/controllers/: auth.py  post.py  pyproject.toml  role.py  user.py
dio_bank/src/models/: models.py
migrations/: alembic.ini
migrations/versions/: 5990bb00c196_cria_tabelas_iniciais.py  98d5fbe37bb9_inicial.py
src/: Untitled-1.py  app.py  config.py  openapi.yaml  utils.py  wsgi.py
src/controllers/: auth.py  post.py  role.py  user.py
src/models/: __init__.py  models.py  post.py  role.py  user.py
src/views/: role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
