[tool.poetry]
name = "dio_bank"
version = "0.1.0"
description = "Projeto Flask para banco digital"
authors = ["Patrícia Gheller <patricia.gheller.1985@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
flask = "^3.0.0"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
